tutorials/implementing-different-types-of-loadbalancers-in-GKE/basic-ingress-ca-cert/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ca-ingress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
